--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "chill/chill",
     "type": "library",
-    "description": "CouchDb client library for PHP 5.3+",
+    "description": "CouchDb/Cloudant client library for PHP 5.3+; a fork from Dan Cryer's original version",
     "keywords": ["couchdb", "couch", "database", "client", "library"],
-    "homepage": "https://github.com/dancryer/Chill",
+    "homepage": "https://github.com/sjchristian/Chill",
     "license": "BSD-2-Clause",
     "authors": [
         {
@@ -11,15 +11,21 @@
             "email": "dan@dancryer.com",
             "homepage": "http://www.dancryer.com",
             "role": "Developer"
+        },
+        {
+            "name": "Simon Christian",
+            "email": "sjchristian@gmail.com",
+            "role": "Developer"
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "psr/log": "1.0.*"
     },
     "autoload": {
         "psr-0": { "Chill": "" }
     },
     "support": {
-        "issues": "https://github.com/dancryer/Chill/issues"
+        "issues": "https://github.com/sjchristian/Chill/issues"
     }
 }
